# AgriGPT_GDG-Hackathon

./: README.md  crop_suggestions_all_india.xlsx
.ipynb_checkpoints/: Model_Development-checkpoint.ipynb
Django_app/Django_app/: .gitignore  db.sqlite3  pyproject.toml
Django_app/Django_app/core/: admin.py  ai.py  context_processors.py  crop_info.py  forms.py  geo_translations.py  ml.py  models.py  translations.py  urls.py  views.py
Django_app/Django_app/core/migrations/: 0001_initial.py  0002_profile_theme.py  0003_alter_profile_preferred_language.py
Django_app/Django_app/core/templatetags/: cache_bust.py
Django_app/Django_app/final_app/: settings.py  urls.py
Django_app/Django_app/ml_model/: NN_Model.h5
Django_app/Django_app/static/css/: style.css
Django_app/Django_app/static/js/: main.js
Django_app/Django_app/templates/: base.html  edit_profile.html  index.html  login.html  profile.html  signup.html
